hw3/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.*;
import java.io.*;
import ast.*;

public class Parser implements ParserConstants {
  public static void main(String [] args) {
    if (args.length < 1) {
      System.out.println("Need a file name as command-line argument.");
      return;
    }
    try {
      FileReader input = new FileReader(args[0]);
      Ast.Program p = new Parser(input).Program();
      input.close();
      System.out.print(p);
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
  static final public Ast.Program Program() throws ParseException {
  List<Ast.ClassDecl> cl = new ArrayList<Ast.ClassDecl>();
  Ast.ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                   cl.add(c);
    }
    jj_consume_token(0);
    {if (true) return new Ast.Program(cl);}
    throw new Error("Missing return statement in function");
  }

// ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {MethodDecl} "}"
//
  static final public Ast.ClassDecl ClassDecl() throws ParseException {
    List<Ast.VarDecl> fields = new ArrayList<Ast.VarDecl>();
    List<Ast.MethodDecl> methods = new ArrayList<Ast.MethodDecl>();
    Ast.VarDecl aField;
    Ast.MethodDecl aMethod;
    Ast.Id className, pid=null;
    jj_consume_token(6);
    className = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      pid = Id();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(54);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      aField = VarDecl();
                                                                                    fields.add(aField);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      aMethod = MethodDecl();
                                                                                                                                   methods.add(aMethod);
    }
    jj_consume_token(55);
        if(pid != null)
            {if (true) return new Ast.ClassDecl(className.nm, pid.nm, fields, methods);}
        else
            {if (true) return new Ast.ClassDecl(className.nm, null, fields, methods);}
    throw new Error("Missing return statement in function");
  }

// MethodDecl -> "public" (ExtType <ID> "(" [Param {"," Param}] ")" "{" {VarDecl} {Stmt} "}" 
//                          | 
//                        "static" "void" "main" "(" "String" "[" "]" <ID> ")" "{" {VarDecl} {Stmt} "}")
//
  static final public Ast.MethodDecl MethodDecl() throws ParseException {
    List<Ast.VarDecl> localVars = new ArrayList<Ast.VarDecl>();
    List<Ast.Stmt> statements = new ArrayList<Ast.Stmt>();
    List<Ast.Param> params = new ArrayList<Ast.Param>();
    Ast.VarDecl aVariable;
    Ast.Stmt aStmt;
    Ast.Param aParam;
    Ast.Id methodName;
    Ast.Type type=null;
    Ast.Id id1=null, id2;
    jj_consume_token(9);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
    case 12:
    case 13:
    case 14:
    case ID:
      type = ExtType();
      id1 = Id();
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        aParam = Param();
                                                         params.add(aParam);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 48:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
          jj_consume_token(48);
          aParam = Param();
                                                                                                 params.add(aParam);
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(51);
      break;
    case 8:
      jj_consume_token(8);
      jj_consume_token(11);
      jj_consume_token(10);
      jj_consume_token(50);
      jj_consume_token(15);
      jj_consume_token(52);
      jj_consume_token(53);
      id2 = Id();
      jj_consume_token(51);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(54);
    label_5:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_5;
      }
      aVariable = VarDecl();
                                                   localVars.add(aVariable);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
      case 20:
      case 22:
      case 23:
      case 24:
      case ID:
      case 54:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      aStmt = Stmt();
                                                                                               statements.add(aStmt);
    }
    jj_consume_token(55);
        if(id1 != null)
            {if (true) return new Ast.MethodDecl(type, id1.nm, params, localVars, statements);}
        else
            {if (true) return new Ast.MethodDecl(type, "main", params, localVars, statements);}
    throw new Error("Missing return statement in function");
  }

// Param -> Type <ID> 
//
  static final public Ast.Param Param() throws ParseException {
    Ast.Type type;
    Ast.Id name;
    Token tknName;
    type = Type();
    tknName = jj_consume_token(ID);
        name = new Ast.Id(tknName.image);
        {if (true) return new Ast.Param(type, name.nm);}
    throw new Error("Missing return statement in function");
  }

// VarDecl -> Type <ID> ["=" InitExpr] ";"
//  
  static final public Ast.VarDecl VarDecl() throws ParseException {
    Ast.Type type;
    Ast.Id name;
    Ast.Exp init=null;
    type = Type();
    name = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      init = InitExpr();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(47);
       // name = new Ast.Id(tknName.image);
        if(init != null)
            {if (true) return new Ast.VarDecl(type, name.nm, init);}
        else
            {if (true) return new Ast.VarDecl(type, name.nm, null);}
    throw new Error("Missing return statement in function");
  }

// ExtType -> Type | "void"
//
  static final public Ast.Type ExtType() throws ParseException {
    Ast.Type type=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
    case ID:
      type = Type();
      break;
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

// Type -> BasicType ["[" "]"] | <ID>
//
  static final public Ast.Type Type() throws ParseException {
    Ast.Type type=null;
    Ast.Id id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      type = BasicType();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        jj_consume_token(53);
                                type = new Ast.ArrayType(type);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      break;
    case ID:
      id = Id();
             type = new Ast.ObjType(id.nm);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

// BasicType -> "int" | "double" | "boolean"
//
  static final public Ast.Type BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
        {if (true) return new Ast.IntType();}
      break;
    case 14:
      jj_consume_token(14);
                                              {if (true) return new Ast.DblType();}
      break;
    case 12:
      jj_consume_token(12);
                                                                                     {if (true) return new Ast.BoolType();}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Stmt -> "{" {Stmt} "}"
//      |  ExtId ["(" [Args] ")" ";" | "[" Expr() "]"] ["=" InitExpr()] ";"
//      |  "if" "(" Expr ")" Stmt ["else" Stmt]
//      |  "while" "(" Expr ")" Stmt
//      |  "System" "." "out" "." "println" "(" [PrArg] ")" ";"
//      |  "return" [Expr] ";"
//
  static final public Ast.Stmt Stmt() throws ParseException {
    List<Ast.Stmt> stmts = new ArrayList<Ast.Stmt>();
    List<Ast.Exp> expressions = new ArrayList<Ast.Exp>();
    Ast.Stmt stmt1=null;
    Ast.Exp extId=null;
    Ast.Field extIdField=null;
    Ast.Id extIdId=null;
    Ast.Exp arrayExpr=null;
    Ast.ArrayElm arrayObj=null;
    Ast.Exp initExpr=null;
    Ast.Exp argsExpr=null;
    Ast.Exp returnExpr=null;
    Ast.Exp whileExpr=null;
    Ast.Stmt whileStmt=null;
    Ast.Exp ifExpr=null;
    Ast.Exp prArgExpr=null;
    Ast.Stmt ifStmt=null;
    Ast.Stmt elseStmt=null;
    List<Ast.Exp> args=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_7;
        }
        stmt1 = Stmt();
                  stmts.add(stmt1);
      }
      jj_consume_token(55);
        {if (true) return new Ast.Block(stmts);}
      break;
    case 19:
    case ID:
      extId = ExtId();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        jj_consume_token(50);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
        case 17:
        case 19:
        case INTLIT:
        case DBLLIT:
        case ID:
        case 34:
        case 39:
        case 50:
          args = Args();
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(51);
        jj_consume_token(47);
                    if(extId instanceof Ast.Field){
                        //extIdField = (Ast.Field) extId;
                        {if (true) return new Ast.CallStmt(((Ast.Field)extId).obj, extIdField.nm, args);}
                    }
                    else{
                        extIdId = (Ast.Id) extId;
                        {if (true) return new Ast.CallStmt(new Ast.This(), extIdId.nm, args);}
                    }
        break;
      case 46:
      case 52:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 52:
          jj_consume_token(52);
          arrayExpr = Expr();
          jj_consume_token(53);
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        jj_consume_token(46);
        initExpr = InitExpr();
        jj_consume_token(47);
                    if(arrayExpr != null)
                    {
                        arrayObj = new Ast.ArrayElm(extId, arrayExpr);
                        {if (true) return new Ast.Assign(arrayObj, initExpr);}
                    }
                    else
                        {if (true) return new Ast.Assign(extId, initExpr);}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 20:
      jj_consume_token(20);
      jj_consume_token(50);
      ifExpr = Expr();
      jj_consume_token(51);
      ifStmt = Stmt();
      if (jj_2_3(2)) {
        jj_consume_token(21);
        elseStmt = Stmt();
      } else {
        ;
      }
            {if (true) return new Ast.If(ifExpr, ifStmt, elseStmt);}
      break;
    case 22:
      jj_consume_token(22);
      jj_consume_token(50);
      whileExpr = Expr();
      jj_consume_token(51);
      whileStmt = Stmt();
        {if (true) return new Ast.While(whileExpr, whileStmt);}
      break;
    case 24:
      jj_consume_token(24);
      jj_consume_token(49);
      jj_consume_token(25);
      jj_consume_token(49);
      jj_consume_token(26);
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 19:
      case INTLIT:
      case DBLLIT:
      case STRLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        prArgExpr = PrArg();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(47);
        {if (true) return new Ast.Print(prArgExpr);}
      break;
    case 23:
      jj_consume_token(23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 19:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        returnExpr = Expr();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(47);
            {if (true) return new Ast.Return(returnExpr);}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Args -> Expr {"," Expr}
//
  static final public List<Ast.Exp> Args() throws ParseException {
    List<Ast.Exp> exprs = new ArrayList<Ast.Exp>();
    Ast.Exp expr=null;
    expr = Expr();
               exprs.add(expr);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 48:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      jj_consume_token(48);
      expr = Expr();
                                                   exprs.add(expr);
    }
   {if (true) return exprs;}
    throw new Error("Missing return statement in function");
  }

// PrArg -> Expr | <STRLIT>
//
  static final public Ast.Exp PrArg() throws ParseException {
    Ast.Exp expr=null;
    Token tknStrLit=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 17:
    case 19:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 34:
    case 39:
    case 50:
      expr = Expr();
      break;
    case STRLIT:
      tknStrLit = jj_consume_token(STRLIT);
                      expr = new Ast.StrLit(tknStrLit.image.substring(1,tknStrLit.image.length()-1));
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

// InitExpr -> "new" ( BasicType "[" <INTLIT> "]" | <ID> "(" ")" )
//          |  Expr 
//
  static final public Ast.Exp InitExpr() throws ParseException {
    Ast.Type type=null;
    Token tknInt=null;
    Ast.IntLit intLit=null;
    Ast.Id id=null;
    Ast.Exp exp=null;
    Ast.Id tknId;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 18:
      jj_consume_token(18);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
        type = BasicType();
        jj_consume_token(52);
        tknInt = jj_consume_token(INTLIT);
        jj_consume_token(53);
                                                   intLit = new Ast.IntLit(Integer.parseInt(tknInt.image)); exp = new Ast.NewArray(type, intLit.i);
        break;
      case ID:
        tknId = Id();
        jj_consume_token(50);
        jj_consume_token(51);
                             exp = new Ast.NewObj(tknId.nm);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 16:
    case 17:
    case 19:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 34:
    case 39:
    case 50:
      exp = Expr();
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

// Expr -> AndExpr {"||" AndExpr}
//
  static final public Ast.Exp Expr() throws ParseException {
    Ast.Exp exp=null;
    Ast.Exp exp2=null;
    exp = AndExpr();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_9;
      }
      jj_consume_token(38);
      exp2 = AndExpr();
                                        exp = new Ast.Binop(Ast.BOP.OR, exp, exp2);
    }
     {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }
